; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/nscd/extr_cacheplcs.c_init_cache_lru_policy.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/nscd/extr_cacheplcs.c_init_cache_lru_policy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cache_policy_ = type { i32 }
%struct.cache_queue_policy_ = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@cache_lru_policy_update_item = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.cache_policy_* @init_cache_lru_policy() #0 {
  %1 = alloca %struct.cache_queue_policy_*, align 8
  %2 = call i32 @TRACE_IN(%struct.cache_policy_* (...)* bitcast (%struct.cache_policy_* ()* @init_cache_lru_policy to %struct.cache_policy_* (...)*))
  %3 = call %struct.cache_queue_policy_* (...) @init_cache_queue_policy()
  store %struct.cache_queue_policy_* %3, %struct.cache_queue_policy_** %1, align 8
  %4 = load i32, i32* @cache_lru_policy_update_item, align 4
  %5 = load %struct.cache_queue_policy_*, %struct.cache_queue_policy_** %1, align 8
  %6 = getelementptr inbounds %struct.cache_queue_policy_, %struct.cache_queue_policy_* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  store i32 %4, i32* %7, align 4
  %8 = call i32 @TRACE_OUT(%struct.cache_policy_* (...)* bitcast (%struct.cache_policy_* ()* @init_cache_lru_policy to %struct.cache_policy_* (...)*))
  %9 = load %struct.cache_queue_policy_*, %struct.cache_queue_policy_** %1, align 8
  %10 = bitcast %struct.cache_queue_policy_* %9 to %struct.cache_policy_*
  ret %struct.cache_policy_* %10
}

declare dso_local i32 @TRACE_IN(%struct.cache_policy_* (...)*) #1

declare dso_local %struct.cache_queue_policy_* @init_cache_queue_policy(...) #1

declare dso_local i32 @TRACE_OUT(%struct.cache_policy_* (...)*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
